--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 *{
  
     background-color: bisque;
+    list-style: none;
 
 
+}
+
+header{
+
+    display: flex;
+    justify-content: space-between;
+    
 }
