--- a/style.css
+++ b/style.css
@@ -8,7 +8,18 @@
 
 header{
 
-    display: flex;
-    justify-content: space-between;
+    color: white;
+    padding: 30px;  
+    font-size: 15px;
+    border: 2px solid black;
+    background-color: rgb(1, 189, 190);
+    font-size: 16px;
+
     
+}
+
+img{
+
+    width: 400px;
+
 }
