--- a/style.css
+++ b/style.css
@@ -14,8 +14,16 @@ header{
     border: 2px solid black;
     background-color: rgb(1, 189, 190);
     font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-    
+}
+
+nav{
+
+    display: flex;
+
 }
 
 img{
